[gd_scene load_steps=6 format=3 uid="uid://26tvuwbai0po"]

[ext_resource type="Script" uid="uid://1y1jtyqcq1bc" path="res://scenes/test_scenes/毛毛虫测试/maomaochong_test_ui.gd" id="1_4issy"]
[ext_resource type="PackedScene" uid="uid://m6lh3kio13pv" path="res://scenes/components/maomao/maomao.tscn" id="1_rchby"]
[ext_resource type="Texture2D" uid="uid://dl6b1yms21s3n" path="res://assets/card/card_sunflower.png" id="2_1lpgw"]
[ext_resource type="PackedScene" uid="uid://4phk0b0keevx" path="res://scenes/components/bowandarrow/bowandarrow.tscn" id="3_1lpgw"]

[sub_resource type="LabelSettings" id="LabelSettings_4issy"]
font_size = 18

[node name="Maomaochong-test-ui" type="Node2D"]
script = ExtResource("1_4issy")

[node name="Maomao" parent="." instance=ExtResource("1_rchby")]
position = Vector2(661, 331)
scale = Vector2(0.2, 0.2)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 400.0

[node name="StageLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "当前阶段: \\"
label_settings = SubResource("LabelSettings_4issy")

[node name="ProgressLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "生命值: 100%"

[node name="HSeparator" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="NextStageButton" type="Button" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "扣血"

[node name="ResetButton" type="Button" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "重置"

[node name="HSeparator2" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="Plant" type="Sprite2D" parent="." groups=["plant"]]
position = Vector2(109, 351)
texture = ExtResource("2_1lpgw")

[node name="Bowandarrow" parent="." groups=["wepon"] instance=ExtResource("3_1lpgw")]
position = Vector2(92, 601)
